@@ -1,0 +1,1 @@
+{"0":{"title":"0052 Summary Complete Step","description":"","labelPlacement":"top_label","descriptionPlacement":"below","button":{"type":"text","text":"Submit","imageUrl":""},"fields":[{"type":"checkbox","id":1,"label":"Checkbox","adminLabel":"","isRequired":false,"size":"medium","errorMessage":"","choices":[{"text":"First Choice","value":"First Choice","isSelected":false,"price":""},{"text":"Second Choice","value":"Second Choice","isSelected":true,"price":""}],"inputs":[{"id":"1.1","label":"First Choice","name":""},{"id":"1.2","label":"Second Choice","name":""}],"formId":"74","description":"","allowsPrepopulate":false,"inputMask":false,"inputMaskValue":"","inputType":"","labelPlacement":"","descriptionPlacement":"","subLabelPlacement":"","placeholder":"","cssClass":"","inputName":"","visibility":"visible","noDuplicates":false,"defaultValue":"","conditionalLogic":"","productField":"","enablePrice":"","multipleFiles":false,"maxFiles":"","calculationFormula":"","calculationRounding":"","enableCalculation":"","disableQuantity":false,"displayAllCategories":false,"useRichTextEditor":false,"displayOnly":"","fields":"","inputMaskIsCustom":"","maxLength":"","enableAutocomplete":false,"autocompleteAttribute":""},{"type":"number","id":3,"label":"First Number","adminLabel":"","isRequired":false,"size":"medium","errorMessage":"","inputs":null,"numberFormat":"decimal_dot","formId":"74","description":"","allowsPrepopulate":false,"inputMask":false,"inputMaskValue":"","inputType":"","labelPlacement":"","descriptionPlacement":"","subLabelPlacement":"","placeholder":"","cssClass":"","inputName":"","visibility":"visible","noDuplicates":false,"defaultValue":"10","choices":"","conditionalLogic":{"actionType":"show","logicType":"all","rules":[{"fieldId":"1","operator":"is","value":"First Choice"}]},"enableCalculation":false,"rangeMin":"","rangeMax":"","productField":"","multipleFiles":false,"maxFiles":"","calculationFormula":"","calculationRounding":"","disableQuantity":false,"displayAllCategories":false,"useRichTextEditor":false,"displayOnly":"","enablePrice":"","fields":"","inputMaskIsCustom":"","maxLength":"","enableAutocomplete":false,"autocompleteAttribute":""},{"type":"product","id":2,"label":"First Product","adminLabel":"","isRequired":false,"size":"medium","errorMessage":"","inputs":[{"id":"2.1","label":"Name","name":""},{"id":"2.2","label":"Price","name":""},{"id":"2.3","label":"Quantity","name":""}],"inputType":"calculation","enablePrice":null,"formId":"74","description":"","allowsPrepopulate":false,"inputMask":false,"inputMaskValue":"","labelPlacement":"","descriptionPlacement":"","subLabelPlacement":"","placeholder":"","cssClass":"","inputName":"","visibility":"visible","noDuplicates":false,"defaultValue":"","choices":"","conditionalLogic":{"actionType":"show","logicType":"all","rules":[{"fieldId":"1","operator":"is","value":"First Choice"}]},"productField":"","basePrice":"$0.00","disableQuantity":true,"multipleFiles":false,"maxFiles":"","calculationFormula":"{First Number:3} * 2","calculationRounding":"","enableCalculation":true,"displayAllCategories":false,"useRichTextEditor":false,"displayOnly":"","fields":"","inputMaskIsCustom":"","maxLength":"","enableAutocomplete":false,"autocompleteAttribute":""},{"type":"product","id":5,"label":"Second Product","adminLabel":"","isRequired":false,"size":"medium","errorMessage":"","inputs":[{"id":"5.1","label":"Name","name":""},{"id":"5.2","label":"Price","name":""},{"id":"5.3","label":"Quantity","name":""}],"inputType":"singleproduct","enablePrice":null,"formId":"74","description":"","allowsPrepopulate":false,"inputMask":false,"inputMaskValue":"","labelPlacement":"","descriptionPlacement":"","subLabelPlacement":"","placeholder":"","cssClass":"","inputName":"","visibility":"visible","noDuplicates":false,"defaultValue":"","choices":null,"conditionalLogic":{"actionType":"show","logicType":"all","rules":[{"fieldId":"1","operator":"is","value":"Second Choice"}]},"productField":"","basePrice":"$50.00","disableQuantity":true,"multipleFiles":false,"maxFiles":"","calculationFormula":"","calculationRounding":"","enableCalculation":"","displayAllCategories":false,"useRichTextEditor":false,"displayOnly":"","fields":"","inputMaskIsCustom":"","maxLength":"","enableAutocomplete":false,"autocompleteAttribute":""}],"version":"2.4.23.4","id":"74","useCurrentUserAsAuthor":true,"postContentTemplateEnabled":false,"postTitleTemplateEnabled":false,"postTitleTemplate":"","postContentTemplate":"","lastPageButton":null,"pagination":null,"firstPageCssClass":null,"is_active":"1","date_created":"2021-03-23 13:58:08","is_trash":"0","markupVersion":2,"nextFieldId":6,"confirmations":[{"id":"5a6a1b66b42f3","name":"Default Confirmation","isDefault":true,"type":"message","message":"Thanks for contacting us! We will get in touch with you shortly.","url":"","pageId":"","queryString":""}],"notifications":[{"id":"5a6a1b66b3d53","to":"{admin_email}","name":"Admin Notification","event":"form_submission","toType":"email","subject":"New submission from {form_title}","message":"{all_fields}"}],"feeds":{"gravityflow":[{"id":"718","form_id":"74","is_active":"1","feed_order":"0","meta":{"step_name":"Start","description":"","step_type":"workflow_start","feed_condition_conditional_logic":"0","feed_condition_conditional_logic_object":[],"scheduled":"0","schedule_type":"delay","schedule_date":"","schedule_delay_offset":"","schedule_delay_unit":"hours","schedule_date_field_offset":"0","schedule_date_field_offset_unit":"hours","instructionsEnable":"0","instructionsValue":"","display_fields_mode":"all_fields","display_order_summary":"1","destination_complete":"next"},"addon_slug":"gravityflow","event_type":null},{"id":"705","form_id":"74","is_active":"1","feed_order":"0","meta":{"step_name":"User Input","description":"","step_type":"user_input","step_highlight":"0","step_highlight_type":"color","step_highlight_color":"#dd3333","feed_condition_conditional_logic":"0","feed_condition_conditional_logic_object":[],"scheduled":"0","schedule_type":"delay","schedule_date":"","schedule_delay_offset":"","schedule_delay_unit":"hours","schedule_date_field_offset":"0","schedule_date_field_offset_unit":"hours","schedule_date_field_before_after":"after","type":"select","assignees":["user_id|1"],"editable_fields":["1"],"routing":"","assignee_policy":"all","conditional_logic_editable_fields_enabled":"1","highlight_editable_fields_enabled":"0","highlight_editable_fields_class":"green-triangle","instructionsEnable":"0","instructionsValue":"","display_fields_mode":"selected_fields","display_fields_selected":["3","2"],"display_order_summary":"1","default_status":"hidden","note_mode":"not_required","assignee_notification_enabled":"0","assignee_notification_from_name":"","assignee_notification_from_email":"{admin_email}","assignee_notification_reply_to":"","assignee_notification_bcc":"","assignee_notification_subject":"","assignee_notification_message":"A new entry requires your input.","assignee_notification_disable_autoformat":"0","resend_assignee_emailEnable":"0","resend_assignee_emailValue":"7","resend_assignee_email_repeatEnable":"0","resend_assignee_email_repeatValue":"3","in_progress_notification_enabled":"0","in_progress_notification_type":"select","in_progress_notification_routing":[{"assignee":"user_id|1","fieldId":"0","operator":"is","value":"","type":""}],"in_progress_notification_from_name":"","in_progress_notification_from_email":"{admin_email}","in_progress_notification_reply_to":"","in_progress_notification_bcc":"","in_progress_notification_subject":"","in_progress_notification_message":"Entry {entry_id} has been updated and remains in progress.","in_progress_notification_disable_autoformat":"0","complete_notification_enabled":"0","complete_notification_type":"select","complete_notification_routing":[{"assignee":"user_id|1","fieldId":"0","operator":"is","value":"","type":""}],"complete_notification_from_name":"","complete_notification_from_email":"{admin_email}","complete_notification_reply_to":"","complete_notification_bcc":"","complete_notification_subject":"","complete_notification_message":"Entry {entry_id} has been updated completing the step.","complete_notification_disable_autoformat":"0","confirmation_messageEnable":"0","confirmation_messageValue":"Thank you.","expiration":"0","expiration_type":"delay","expiration_date":"","expiration_delay_offset":"","expiration_delay_unit":"hours","expiration_date_field_offset":"0","expiration_date_field_offset_unit":"hours","expiration_date_field_before_after":"after","status_expiration":"complete","destination_expired":"next","destination_complete":"next"},"addon_slug":"gravityflow","event_type":null},{"id":"719","form_id":"74","is_active":"1","feed_order":"0","meta":{"step_name":"Complete","description":"","step_type":"workflow_complete","step_highlight":"0","feed_condition_conditional_logic":"0","scheduled":"0","instructionsEnable":"0","instructionsValue":"","display_fields_mode":"all_fields","display_order_summary":"0"},"addon_slug":"gravityflow","event_type":null}]}},"version":"2.4.23.4"}
